--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
      - .:/code
   redis:
-    image: "redis:alpine"
+    image: "redis"
 networks:
   default:
     external:
