--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   web:
     build: .
     ports:
-     - "${PORT}:5000"
+     - "${PORT:-5000}:5000"
     volumes:
      - .:/code
   redis:
