--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: '2.1'
 services:
   web:
-    build: .
+    build:
+      context: ./frontend
+      dockerfile: ${NEXTJS_DOCKERFILE:-Dockerfile}
     ports:
-     - "5001:5000"
+     - "${PORT:-5000}:5000"
     volumes:
-     - .:/code
+     - .:frontend/code
   redis:
     image: "redis"
